--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/.",
     "dev": "nodemon src/index.ts",
-    "build":"rimraf dist && tsc"
+    "build": "rimraf dist && tsc"
   },
   "author": "",
   "license": "ISC",
@@ -24,6 +24,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "mongoose": "^8.2.1",
     "multer": "^1.4.5-lts.1"
   }
 }
