--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 PORT = 3000
-URLDB= mongodb+srv://mateeldemoledor:hola123@cluster0.ztfvxtn.mongodb.net/HarmonyHub?retryWrites=true&w=majority
+URLDB = mongodb+srv://mateeldemoledor:hola123@cluster0.ztfvxtn.mongodb.net/HarmonyHub?retryWrites=true&w=majority
+TOKEN_KEY = token
