--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "typescript": "^5.4.2"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "express-handlebars": "^7.1.2",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1"
   }
 }
