--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.11.27",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "mongoose": "^8.2.1",
     "nodemon": "^3.1.0",
     "rimraf": "^5.0.5",
@@ -31,6 +33,8 @@
     "express": "^4.18.3",
     "express-handlebars": "^7.1.2",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   }
 }
