--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 PORT = 3000
 URLDB = mongodb+srv://mateeldemoledor:hola123@cluster0.ztfvxtn.mongodb.net/HarmonyHub?retryWrites=true&w=majority
 TOKEN_KEY = token
+UPLOAD_FOLDER =uploads
+S3_ACCESS_KEY =AKIASWDFCOGYIVACSWWA
+S3_SECRET_KEY =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
+REGION =us-east-2
+S3_NAME =iteso-p2024
