--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/express-handlebars": "^6.0.0",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.11",
+    "@types/multer-s3": "^3.0.3",
     "@types/node": "^20.11.27",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
@@ -27,6 +28,7 @@
     "typescript": "^5.4.2"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.540.0",
     "@types/jsonwebtoken": "^9.0.6",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
@@ -34,6 +36,7 @@
     "express-handlebars": "^7.1.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   }
