--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@ PORT = 3000
 URLDB = mongodb+srv://mateeldemoledor:hola123@cluster0.ztfvxtn.mongodb.net/HarmonyHub?retryWrites=true&w=majority
 TOKEN_KEY = token
 UPLOAD_FOLDER =uploads
+S3_ACCESS_KEY 
+S3_SECRET_KEY
+REGION 
+S3_NAME 
