--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,11 @@ PORT = 3000
 URLDB = mongodb+srv://mateeldemoledor:hola123@cluster0.ztfvxtn.mongodb.net/HarmonyHub?retryWrites=true&w=majority
 TOKEN_KEY = token
 UPLOAD_FOLDER =uploads
-S3_ACCESS_KEY 
-S3_SECRET_KEY
-REGION 
-S3_NAME 
+S3_ACCESS_KEY =AKIAQ3EGQFEEDWNQ236K
+S3_SECRET_KEY =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
+REGION =us-east-2
+S3_NAME =harmonyhub
+GOOGLE_ID=102156476868-m29phdc7l4lhi445i7uv6vs0uodtl4ju.apps.googleusercontent.com
+GOOGLE_SECRET=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
+SECRET_KEY=helloworld
+CALLBACK_URL=http://localhost:3000/google/callback
