--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/express-handlebars": "^6.0.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.11",
     "@types/multer-s3": "^3.0.3",
     "@types/node": "^20.11.27",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
-    "@types/jsonwebtoken": "^9.0.6",
     "mongoose": "^8.2.1",
     "nodemon": "^3.1.0",
     "rimraf": "^5.0.5",
@@ -30,13 +30,17 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.540.0",
+    "@types/passport-google-oauth20": "^2.0.14",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "express-handlebars": "^7.1.2",
+    "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   }
