--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ URLDB = mongodb+srv://mateeldemoledor:hola123@cluster0.ztfvxtn.mongodb.net/Harmo
 TOKEN_KEY = token
 UPLOAD_FOLDER
 S3_ACCESS_KEY
-S3_SECRET_KEY = uploads
+S3_SECRET_KEY = 5Wnk4w0KGiZoek26GCUdqFEKvoOMn2EbX/0JNTlp
 REGION
 S3_NAME
 GOOGLE_ID=102156476868-m29phdc7l4lhi445i7uv6vs0uodtl4ju.apps.googleusercontent.com
