--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ PORT = 3000
 URLDB = mongodb+srv://mateeldemoledor:hola123@cluster0.ztfvxtn.mongodb.net/HarmonyHub?retryWrites=true&w=majority
 TOKEN_KEY = token
 UPLOAD_FOLDER
-S3_ACCESS_KEY
+S3_ACCESS_KEY = AKIAQ3EGQFEEDWNQ236K
 S3_SECRET_KEY = 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
 REGION
 S3_NAME
