--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.7",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/express-handlebars": "^6.0.0",
@@ -31,6 +32,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.540.0",
     "@types/passport-google-oauth20": "^2.0.14",
+    "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
