--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.540.0",
     "@types/passport-google-oauth20": "^2.0.14",
+    "axios": "^1.6.8",
     "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
