Le cambie el build

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/.",
+    "start": "node dist/src",
     "dev": "nodemon src/index.ts",
-    "build": "rimraf dist && tsc"
+    "build": "rimraf dist && tsc && xcopy /s /y /i src\\views dist\\src\\views && xcopy /s /y /i src\\public dist\\src\\public "
   },
   "author": "",
   "license": "ISC",
