Le cambie el modulo

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "target": "ES2022",
         "outDir": "./dist",
-        "module": "NodeNext",
+        "module": "CommonJS",
         "esModuleInterop": true,
         "resolveJsonModule": true
     },
