--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/passport-google-oauth20": "^2.0.14",
     "axios": "^1.6.8",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
